--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ language: node_js
 before_script:
   - npm install -g grunt-cli
 
-script: grunt test --verbose --force
+script:
+  - grunt test --verbose --force
+  - grunt coveralls --verbose
